update landing page

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
   <!-- code a Hero / Banner section -->
-    <div class="banner" style="background-image: url(images/High_realism_photo_of_the_feet.png);">
+    <div class="banner" style="background-image: url(images/highly-realistic-shoes-banner3.png);">
       <h2>Change your life; learn to tie your shoes</h2>
-      <p>The world's most prestigious site for teaching how to tie shoe laces</p>
-      <a class="button-beige" href="#">Learn now!</a>
+      <p>The world's most prestigious site for teaching how to tie your shoe laces</p>
+      <a class="button-beige" href="https://www.ted.com/talks/terry_moore_how_to_tie_your_shoes">Learn now!</a>
     </div>
 
     <h2 class="cards-title">The Knots</h2>
@@ -22,25 +22,25 @@
       <!-- code a "How it works" section -->
 
       <div class="card">
-        <image src="images/craiyon_151403_tying_a_shoe_knot.png"></image>
+        <image src="images/half windsor shoe.png"></image>
         <h3>The Half Windsor</h3>
         <p>Keep it lowkey while casually flexing your fashion sense.</p>
       </div>
 
       <div class="card">
-        <image src="images/craiyon_151420_tying_a_shoe_knot.png"></image>
+        <image src="images/the full windsor shoe.png"></image>
         <h3>The Full Windsor</h3>
         <p>Show your style with this classic knot.</p>
       </div>
 
       <div class="card">
-        <image src="images/craiyon_152102_tying_shoe_laces.png"></image>
+        <image src="images/flying buttress shoe.png"></image>
         <h3>The Flying Buttress</h3>
         <p>Break all the rules. Your fashion knows no bounds.</p>
       </div>
 
       <div class="card">
-        <image src="images/craiyon_152126_tying_shoe_laces.png"></image>
+        <image src="images/merry-go-round shoe.png"></image>
         <h3>The Merry-Go-Round</h3>
         <p>For those bold enough to choose true shoe security.</p>
       </div>
@@ -51,7 +51,7 @@
       <ul class="horizontal-list">
         <li><a href="#"><i class="fa-solid fa-shoe-prints" style="color: #f2d7ba;"></i></a></li>
         <li><a href="#"><i class="fa-solid fa-person-running" style="color: #f2d7ba;"></i></i></a></li>
-        <li><a href="#"><i class="fa-solid fa-shoe-prints" style="color: #f2d7ba;"></i></a></li>
+        <li><a href="#"><i class="fa-solid fa-bolt" style="color: #f2d7ba;"></i></a></li>
       </ul>
 
       <p>Cursed images made with 💕 by AI</p>
